--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,10 +1,8 @@
 <li>
-  <strong>{{question.content}}</strong> by <strong>{{question.author}}</strong>. My initial thoughts/the place I got stuck is: <strong>{{question.notes}}</strong>
+  {{#link-to 'question' question.id}}{{question.author}}'s question is {{question.content}} and the initial thoughts are {{question.notes}} {{/link-to}}
   {{#if isNotesShowing}}
     <p>{{question.notes}} {{action 'notesHide'}}</p>
   {{else}}
     <button {{action 'notesShow'}}>Show notes</button>
   {{/if}}
-  {{update-question question=question update="update"}}
-  <button {{action 'delete' question}}>Delete Question</button>
 </li>
