add model relationships and delte model relationships

--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,3 +1,10 @@
 {{question.content}} by {{question.author}} initial thoughts were {{question.notes}}
 <br>
+
+<h2> Answers </h2>
+<ul>
+  {{#each question.answers as |review|}}
+    {{answer-tile answer=answer destroyAnswer="destroyAnswer"}}
+  {{/each}}
+</ul>
 <button {{action 'delete' question}}>Delete Question</button>
