--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,13 +2,24 @@
 
 <p>Where Devs help Devs become better Devs! Feel free to ask any question that you are stuck on and answer any question you think you have the answer to!</p>
 
+<h2> Questions </h2>
 <ul>
-  {{#each model as |question|}}
+  {{#each model.questions as |question|}}
     {{question-tile question=question}}
   {{/each}}
 </ul>
 
-{{new-question saveQuestion2="saveQuestion3"}}
+{{new-question saveQuestion="saveQuestion"}}
+
+<h2> All Answers </h2>
+
+<ul>
+  {{#each model.answers as |answer|}}
+    <li>{{answer.content}} - by {{answer.author}}</li>
+  {{/each}}
+</ul>
+
+{{new-answer saveAnswer="saveAnswer"}}
 
 {{#link-to 'about'}}About{{/link-to}}
 {{#link-to 'contact'}}Click here to contact us.{{/link-to}}
