--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,3 +1,3 @@
 <li>{{answer.content}} by {{answer.content}}</li>
 
-<button {{actopn 'delete' answer}}> Delete Answer</button>
+<button {{action 'delete' answer}}> Delete Answer</button>
