--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -17,7 +17,7 @@
         {{input value=notes id="notes"}}
       </div>
 
-      <button {{action 'savequestion1'}}>Save</button>
+      <button {{action 'saveQuestion'}}>Save</button>
     </form>
   </div>
 {{else}}
