--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -3,8 +3,8 @@
 
 <h2> Answers </h2>
 <ul>
-  {{#each question.answers as |review|}}
-    {{answer-tile answer=answer destroyAnswer="destroyAnswer"}}
+  {{#each question.answers as |answer|}}
+    {{answer-tile answer=answer}}
   {{/each}}
 </ul>
 <button {{action 'delete' question}}>Delete Question</button>
