--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,3 +1,3 @@
-<li>{{answer.content}} by {{answer.content}}</li>
+<li>{{answer.content}} by {{answer.author}}</li>
 
 <button {{action 'delete' answer}}> Delete Answer</button>
