--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -11,10 +11,10 @@
 
 {{new-question saveQuestion="saveQuestion"}}
 
-<h2> All Answers </h2>
+<!-- <h2> All Answers </h2>
 
 <ul>
   {{#each model.answers as |answer|}}
     <li>{{answer.content}} - by {{answer.author}}</li>
   {{/each}}
-</ul>
+</ul> -->
